made activity log

--- a/src/app/components/dashboard/board.component.html
+++ b/src/app/components/dashboard/board.component.html
@@ -1,8 +1,13 @@
+
+
+ 
 <div class="boardcontent">
+               
                 <i class="material-icons">
                                 add_circle
                                 </i>
         <h2>Add team members</h2>
+        
                 </div>
         <mat-form-field>
                 <input matInput placeholder="Enter name or email">
@@ -17,31 +22,34 @@
                                  <div class="subscriberlist">
                                                 <button mat-mini-fab>AB</button>
                                         <button mat-list-item > ABC </button>
-                                        <i class="material-icons" >
-                                                        add_circle
-                                                        </i>
-                                                        <i class="material-icons" >
-                                                                        add_circle
+                                        
+                                                        <i matTooltip="Remove ABC from this board" class="material-icons" >
+                                                                        cancel
                                                                         </i>
                                   </div>
                                   <div class="subscriberlist">
                                                 <button mat-mini-fab>XY</button>
                                                 <button mat-list-item > XYZ </button>
-                                                <i class="material-icons" >
-                                                                add_circle
+                                                <i matTooltip="Remove XYZ from this board" class="material-icons">
+                                                                cancel
                                                                 </i>
-                                                                <i class="material-icons" >
-                                                                                add_circle
-                                                                                </i>
+                                                                
 
                                   </div>
                                        
                                      </mat-action-list>
+                                     <div class="cancelicon">
+                                             <img src="../../../assets/images/Component 2 – 1.png" alt="" style="width: 30px;">
+                                                <!-- <i class="material-icons">
+                                                                cancel
+                                                                </i>    -->
+
+                                </div>  
                                      
                                                   
-                                                                   
-                                                
-                      
+                                                       
+                                              
+                                               
               
              
 
