--- a/src/app/components/dashboard/dialog.component.html
+++ b/src/app/components/dashboard/dialog.component.html
@@ -1,9 +1,26 @@
-<h1>popup works</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti est dolores explicabo voluptatem ipsam commodi a nam ratione recusandae assumenda, temporibus id, iure magni omnis dolorem rem obcaecati voluptas!</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel amet neque similique quibusdam et numquam, officiis impedit. Eos laboriosam perspiciatis nostrum dignissimos error distinctio, ad explicabo. Dignissimos omnis repellendus delectus.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti est dolores explicabo voluptatem ipsam commodi a nam ratione recusandae assumenda, temporibus id, iure magni omnis dolorem rem obcaecati voluptas!</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel amet neque similique quibusdam et numquam, officiis impedit. Eos laboriosam perspiciatis nostrum dignissimos error distinctio, ad explicabo. Dignissimos omnis repellendus delectus.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti est dolores explicabo voluptatem ipsam commodi a nam ratione recusandae assumenda, temporibus id, iure magni omnis dolorem rem obcaecati voluptas!</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel amet neque similique quibusdam et numquam, officiis impedit. Eos laboriosam perspiciatis nostrum dignissimos error distinctio, ad explicabo. Dignissimos omnis repellendus delectus.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti est dolores explicabo voluptatem ipsam commodi a nam ratione recusandae assumenda, temporibus id, iure magni omnis dolorem rem obcaecati voluptas!</p>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel amet neque similique quibusdam et numquam, officiis impedit. Eos laboriosam perspiciatis nostrum dignissimos error distinctio, ad explicabo. Dignissimos omnis repellendus delectus.</p>
+<!-- <mat-action-list>
+        <button mat-list-item > <i class="material-icons dotdrop">
+                create
+                </i> Rename Board </button>
+        <button mat-list-item> <i class="material-icons dotdrop">
+                cloud
+                </i> Archived Task </button>
+        <button mat-list-item> <i class="material-icons dotdrop">
+                person
+                </i> Board Subscriber </button>
+        <button mat-list-item> <i class="material-icons dotdrop">
+                cloud
+                </i> Archived Task </button>
+                <button mat-list-item > <i class="material-icons dotdrop">
+                        create
+                        </i> Rename Board </button>
+                        
+                        <button mat-list-item > <i class="material-icons dotdrop">
+                                create
+                                </i> Rename Board </button>
+      </mat-action-list>
+      <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>Item 1</button>
+  <button mat-menu-item>Item 2</button>
+</mat-menu> -->
