--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-color:white;
   box-shadow: 3px 3px 6px grey;
 }
+.ng-sidebar{
+  width: 42%;
+}
