--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -15,14 +15,14 @@
  
     
 }
-.gap{
-    margin-right: 28px;
-}
+// .gap{
+//     margin-right: 28px;
+// }
 .box3{
     border: 2px solid #8080804a;
    
     margin-right: 21px;
-    padding: 7px;
+    // padding: 7px;
     display: flex;
     -ms-flex-align: center;
     align-items: center;
@@ -60,22 +60,25 @@ background-repeat: no-repeat;
     cursor: pointer;
 }
 .shape3{
-    padding-right: 18px;
+   
     display: flex;
     align-items: center;
     font-size: 16px;
-    padding-left: 23px;
+   
     cursor: pointer;
+}
+.shape3:hover{
+    color: cyan;
 }
 
 .box1{
-    padding: 7px;
+    // padding: 7px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 8px;
+    margin-right: 28px;
     border-radius: 4px;
-    border: 1px solid #E1E1E1;
+    // border: 1px solid #E1E1E1;
     cursor: pointer;
 }
 .activity2{
@@ -89,9 +92,9 @@ background-repeat: no-repeat;
     background-color: #bbb;
     border-radius: 50%;
 }
-.mat-mini-fab.mat-accent{
-    margin-right: 5px;
-}
+// .mat-mini-fab.mat-accent{
+//     margin-right: 5px;
+// }
 .mat-mini-fab.mat-accent:hover{
     background-color: grey;
 }
@@ -99,6 +102,7 @@ background-repeat: no-repeat;
     width: 99%;
     height: 363px;
     margin: 10px;
+    margin-top: 80px;
    
 .example-container {
     width: 100%;
@@ -133,6 +137,34 @@ background-repeat: no-repeat;
     width: 800px; background-color: red;
   }
 }
+.dot {
+    height: 29px;
+  width: 29px;
+  display: flex;
+  
+  vertical-align: middle;
+  border-radius: 50%;
+  background: #673ab7;
+  margin-right: 8px;
+  justify-content: center;
+  align-items: center;
+  color: white;
+
+  }
+  .lowertopbar{
+    float: right;
+    
+    margin-right: 51px;
+  }
+  .taskbutton{
+    border-radius: 35px;
+    padding: 0px 26px;
+    margin-right: 26px;
+  }
+  .horizontalline1{
+      width: 99%;
+      border: 1px solid #8080801c;
+  }
 /*----integration popup-----*/
 .category{
     text-align: center;
@@ -157,12 +189,28 @@ background-repeat: no-repeat;
 }
 .material-icons{
     cursor: pointer;
+    font-size: 25px;
 }
 .boardcontent{
     display: flex;
     align-items: center;
 
 }
+
+.cancelicon{
+    position: absolute;
+    top: 147px;
+    
+    right: 371px;
+}
+   
+
+   
+    
+    
+    
+
+
 /*------sidebar------*/
 .subscriberlist{
     display: flex;
@@ -174,7 +222,7 @@ background-repeat: no-repeat;
    
 }
 .sidemargin{
-    margin-left: 42px;
+    margin-left: 25px;
 }
 .filterlog{
     border-radius: 20px;
@@ -184,10 +232,79 @@ background-repeat: no-repeat;
     border: 1px solid gray;
     margin-top: 10px;
 }
-.logtopbar{
-    
+.horizontalline{
+    width: 90%;
+    border: 1px solid #ccc7c757;
 }
-   
-   
+.days{
+    color: gray;
+    
+    margin-left: 20px;
+    font-size: 12px;
+}
+.workdone{
+    font-size: 14px;
+    margin-left: 15px;
+}
+/*--------dotdropdown-------*/
+.dotdrop{
+    margin-right: -4px;
+    margin-left: 17px;
+    font-size: 20px;
+}
+.renameboard{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+// .dottedicon:hover{
+//     background-color: grey;
+//     border-radius: 50%;
+//     height: 39px;
+//     width: 39px;
+// }
+// .dottedicon{
+//     margin-right: 9px;
+    
+// }
+.menubutton{
+ background-color: transparent;
+ box-shadow: transparent;
+ box-shadow: 0px 0px 0px 0px white;
+ margin-right: 30px;
+}
+.menubutton:hover{
+    background-color: grey;
+   border-radius: 50%;
+    height: 39px;
+     width: 39px;
+
+}
+    
+
+
+/*--------members-------*/
+.dot1 {
+    height: 35px;
+  width: 35px;
+  display: flex;
+  color: white;
+  vertical-align: middle;
+  border-radius: 50%;
+  background: #673ab7;
+  margin-right: 8px;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 1px 0px 5px 0px grey;
+  font-size: 13px;
+  border: 1px solid white;
+
+  }
+   .member1{
+       margin-right: -7px;
+   }
+   .member2{
+    margin-right: -14px;
+}
 
 
