--- a/src/app/components/inbox/inbox.component.html
+++ b/src/app/components/inbox/inbox.component.html
@@ -38,7 +38,11 @@
         </form>
     </div>
     <div class="part-b clearfix">
-    <span><i class="fas fa-paperclip"></i>Add file</span>
+    <!-- <span><i class="fas fa-paperclip"></i>Add file</span> -->
+    <label class="custom-file-upload">
+            <input type="file"/>
+            <i class="fas fa-paperclip"></i> Add file
+        </label>
     <button>Reply</button>
 </div>
 </div>
