removed folder atm

--- a/src/app/components/dashboard/board.component.html
+++ b/src/app/components/dashboard/board.component.html
@@ -20,7 +20,7 @@
              
                         <mat-action-list>
                                  <div class="subscriberlist">
-                                                <button mat-mini-fab>AB</button>
+                                                <button mat-mini-fab class="boardbutton">AB</button>
                                         <button mat-list-item > ABC </button>
                                         
                                                         <i matTooltip="Remove ABC from this board" class="material-icons" >
@@ -28,8 +28,8 @@
                                                                         </i>
                                   </div>
                                   <div class="subscriberlist">
-                                                <button mat-mini-fab>XY</button>
-                                                <button mat-list-item > XYZ </button>
+                                                <button mat-mini-fab class="boardbutton" >XY</button>
+                                                <button mat-list-item  > XYZ </button>
                                                 <i matTooltip="Remove XYZ from this board" class="material-icons">
                                                                 cancel
                                                                 </i>
