--- a/src/app/components/inbox/inbox.component.html
+++ b/src/app/components/inbox/inbox.component.html
@@ -14,8 +14,8 @@
     <p><span>Dashboard</span> Satuts was changed from</p> 
 </div>
     <div class="btn-div">
-    <button class="stuck-btn">Stuck</button> <i class="fas fa-chevron-right"></i>
-    <button class="done-btn">Done</button></div>
+    <button class="stuck-btn red">Stuck</button> <i class="fas fa-chevron-right"></i>
+    <button class="done-btn green">Done</button></div>
 </div>
 </div>
 <div class="second-section" *ngIf="replySection">
