--- a/src/app/components/inbox/inbox.component.scss
+++ b/src/app/components/inbox/inbox.component.scss
@@ -37,7 +37,7 @@ padding: 0px 40px;
     float: left;
     text-align: center;
     .stuck-btn {
-        background-color: #EB7C8D;
+        // background-color: #EB7C8D;
         color: white;
         font-weight: 400;
         border-radius: 2px;
@@ -46,7 +46,7 @@ padding: 0px 40px;
         padding: 10px 32px;
     }
     .done-btn {
-        background-color: #4DD99F;
+        // background-color: #4DD99F;
         color: white;
         font-weight: 400;
         border-radius: 2px;
