--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,3 +1,33 @@
 <div class="notification-main-div">
-    fghf
+    <table>
+        <tr>
+          <td>
+                <div class="time">
+                    <i  class="material-icons clock"> access_time </i>
+                    <span >22h</span></div>
+          </td>
+          <td>
+              <div class="name">
+              <span class="dot">AB</span>
+              <span >John Smith</span>
+            </div>
+        </td>
+          <td>
+                <div class="update">
+                    <i class="material-icons clock"> add_circle_outline </i>
+                    <span>Created</span></div>
+          </td>
+          <td>
+                <div class="name"><span>Group : things to do</span></div>
+          </td>
+          <td>
+              <div class="status">
+                  <button class="red">Stuck</button>
+                  <i class="fas fa-chevron-right"></i>
+                  <button class="green">Done</button>
+              </div>
+          </td>
+        </tr>
+       
+      </table>
 </div>
