--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -1,3 +1,59 @@
 .notification-main-div {
     padding: 0px 40px;
+
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+      }
+      
+      td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
+      .dot {
+        height: 35px;
+        width: 35px;
+        display: flex;
+        font-size: 13px;
+        vertical-align: middle;
+        border-radius: 50%;
+        background: #673ab7;
+        margin-right: 5px;
+        justify-content: center;
+        align-items: center;
+        color: white;
+    }
+    .name {
+        display: flex;
+    align-items: center;
+    }
+    .time {
+        display: flex;
+        align-items: center;
+    }
+    .clock {
+        font-size: 19px;
+        margin-right: 2px;
+    }
+    .update {
+        display: flex;
+        align-items: center;  
+    }
+    .status {
+        button {
+            color: white;
+            font-weight: 400;
+            border-radius: 2px;
+            border: none;
+            font-size: 14px;
+            padding: 5px 16px;
+        }
+        .fas {
+            margin: 0px 5px;
+            font-size: 17px;
+            color: #c5bfbf;
+        }
+    }
 }
